# XenonEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  MacWindow.licenseheader  MacWindow.vcxproj  MacWindow.vcxproj.filters  README.md  XenonEngine.sln
Algorithms/: AlgorithmMacro.h  DepthFirstSearch.cpp  DepthFirstSearch.h  DeterministicFiniteAutomaton.h  Dictionary.h  FiniteStateMachine.cpp  FiniteStateMachine.h  Graph.h  Iterator.h  LinkedList.h  PriorityQueue.h  Sort.h  Stack.h  StreamingVector.h  String.h  StringSort.cpp  StringSort.h  TypeString.h  Utility.h  Vector.h
Base.lproj/: Main.storyboard
CrossPlatform/: DataPair.cpp  DataPair.h  Database.cpp  Database.h  EngineConfig.h  FileTypeEnum.h  FrameBuffer.cpp  FrameBuffer.h  IFile.cpp  IFile.h  Polygon2D.cpp  Polygon2D.h  Polygon3D.cpp  Polygon3D.h  SColorRGB.cpp  SColorRGB.h  SColorRGBA.cpp  SColorRGBA.h  ScaffoldSingleton.h  StringYamlConvert.h  XenonFile.h  XenonImage.cpp  XenonImage.h  XenonKey.cpp  XenonKey.h  XenonManager.h  XenonObject.h  XenonShaderType.h  XenonSingleton.h
CrossPlatform/Converter/: Camera3DYamlConverter.h  CameraControllerConverter.h  ComponentTypeYamlConverter.h  DirectionLightYamlConverter.h  EngineConfigYamlConverter.h  FileHeaderYamlConverter.h  FileTypeYamlConverter.h  GUIDYamlConverter.h  GameObjectWorldYamlConverter.h  GameObjectYamlConverter.h  IFileYamlConverter.h  ImageYamlConverter.h  MaterialYamlConverter.h  Mesh3DYamlConverter.h  Polygon3DYamlConverter.h  StringYamlConverter.h  Transform2DYamlConverter.h  Transform3DYamlConverter.h  Vector2YamlConverter.h  Vector3YamlConverter.h  Vector4YamlConverter.h  WorldYamlConverter.h
CrossPlatform/Editor/: XenonEditorInterface.cpp  XenonEditorInterface.h
CrossPlatform/File/: FileHeader.cpp  FileHeader.h  FileMetaFactory.cpp  FileMetaFactory.h  FileMetaRegister.h  FolderMeta.cpp  FolderMeta.h  GameObjectWorldMeta.cpp  GameObjectWorldMeta.h  IFileMeta.cpp  IFileMeta.h  IMetaRegister.h  ImageMeta.cpp  ImageMeta.h  MaterialMeta.cpp  MaterialMeta.h  Mesh3DMeta.cpp  Mesh3DMeta.h  ModelMeta.cpp  ModelMeta.h  OBJMeta.cpp  OBJMeta.h  Polygon3DMeta.cpp  Polygon3DMeta.h  WorldMeta.cpp  WorldMeta.h
CrossPlatform/Image/: Image.cpp  Image.h
CrossPlatform/Interface/: DrawerType.h  IDrawer.h  IDrawerConfig.h  IDrawerSurface.h  IFileReader.h  IInput.h  ITimer.h
CrossPlatform/Material/: Material.cpp  Material.h  XenonMaterial.cpp  XenonMaterial.h
CrossPlatform/Polygon/: Polygon3D.cpp  Polygon3D.h  Triangle3D.cpp  Triangle3D.h  Vertex3D.cpp  Vertex3D.h
CrossPlatform/Primitive/: Primitive2D.cpp  Primitive2D.h
Data/: CopyFileToDebugFolder.sh  CopyFileToReleaseFolder.sh  EngineConfig.yaml  FromSCVtoXetFile.sh  FromXetToCSVFile.sh  KeQing.mtl  Main.xea  Main0.xea  XenonEngineNatvisFile.natvis  XenonScriptAssemblerDelimiter.xet  XenonScriptAssemblerDelimiter.xet.csv  XenonScriptAssemblerMachineInstrction.xet  XenonScriptAssemblerMachineInstrction.xet.csv  cube.mtl
Data/Blue Fabric Jacket/: model.mtl
Document/: Mesh3D Struction.wsd  rendering pipeline overview.wsd
Engine/: EngineManager.cpp  EngineManager.h  EngineSyncData.cpp  EngineSyncData.h  FileDatabase.cpp  FileDatabase.h  GameObject.cpp  GameObject.h  GameObjectWorld.cpp  GameObjectWorld.h  GameObjectWorldManager.cpp  GameObjectWorldManager.h  GameplayMain.cpp  GameplayMain.h  XenonEngineEdtior.cpp  XenonEngineEdtior.h
Engine/Component/: BoxCollider2D.cpp  BoxCollider2D.h  Camera3D.cpp  Camera3D.h  Camera3DController.cpp  Camera3DController.h  CameraController.cpp  CameraController.h  CircleCollider2D.cpp  CircleCollider2D.h  Collider2D.cpp  Collider2D.h  DirectionLightComponent.cpp  DirectionLightComponent.h  IComponent.h  LightComponent.cpp  LightComponent.h  Mesh2D.cpp  Mesh2D.h  Mesh3D.cpp  Mesh3D.h  PlayerPersonality.cpp  PlayerPersonality.h  PointLightComponent.cpp  PointLightComponent.h  Render2D.cpp  Render2D.h  Rigidbody2D.cpp  Rigidbody2D.h  Transform2D.cpp  Transform2D.h  Transform3D.cpp  Transform3D.h
Engine/Editor/: EditorDatabase.cpp  EditorDatabase.h  EditorGUI.h  EditorGameObject.cpp  EditorGameObject.h  EditorGameObjectWorld.cpp  EditorGameObjectWorld.h  EditorWindowEngineDebug.cpp  EditorWindowEngineDebug.h  EditorWindowFileDatabase.cpp  EditorWindowFileDatabase.h  EditorWindowGameObjectWorld.cpp  EditorWindowGameObjectWorld.h  XenonBaseWidget.cpp  XenonBaseWidget.h  XenonBaseWindow.cpp  XenonBaseWindow.h
Engine/FileManager/: FileManager.cpp  FileManager.h
Engine/Graphic/: Graphic2D.cpp  Graphic2D.h  Graphic3D.cpp  Graphic3D.h  RenderList3D.cpp  RenderList3D.h
Engine/IO/: InputSystem.cpp  InputSystem.h  ObjLoader.cpp  ObjLoader.h  ObjectImporter.cpp  ObjectImporter.h  XenonImageLoader.cpp  XenonImageLoader.h
Engine/Physics/: Force2D.h  Physics2D.cpp  Physics2D.h  PhysicsConstant.h
Engine/Primitive/: Graphic2D.cpp  Graphic2D.h  Primitive2D.cpp  Primitive2D.h
Engine/Timer/: XenonTimer.cpp  XenonTimer.h
Engine/VirtualMachine/: XenonCompiler.cpp  XenonCompiler.h  XenonScriptAssemblerMachine.cpp  (+4 more)
Gameplay/: Bullet.cpp  Bullet.h  CameraObject3D.cpp  CameraObject3D.h  Cube3D.cpp  Cube3D.h  Enemy.cpp  Enemy.h  GameObject.h  GameplayMain.cpp  GameplayMain.h  Player.cpp  Player.h  SceneDirectionLight.cpp  SceneDirectionLight.h
MacOS/: AppDelegate.h  AppDelegate.m  Info.plist  MacDrawer.h  MacDrawer.mm  ViewController.h  ViewController.mm  main.m
MacWindow/: AppDelegate.m  MacDrawer.h  MacDrawer.mm  MathLib.cpp  MathLib.hpp  UICanvas.h  UICanvas.m  ViewController.h  ViewController.m  ViewController.mm  main.m
MacWindow.xcodeproj/: project.pbxproj
MathLab/: MathLabDefinition.h  MathLib.cpp  MathLib.h  Matrix.h  Matrix2.h  Matrix3.cpp  Matrix3.h  Quaternion.h  Vector.h  Vector2.cpp  Vector2.h  Vector2f.h  Vector2i.cpp  Vector2i.h  Vector3.cpp  Vector3.h  Vector3f.cpp  Vector3f.h  Vector4.h  Vertex3i.h  ViewStruct.cpp  ViewStruct.h
Tool/: README.md  xenon-assembler-script-highlight-0.0.1.vsix
Windows/: BaseWindow.h  MainWindow.cpp  MainWindow.h  Resources.rc  XenonEngineNatvisFile.natvis  main.cpp
XenonEngine.xcodeproj/: project.pbxproj
(+36 files in other folders)
